--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "jamuhl"
-  , "name": "i18next-clientscript"
-  , "version": "0.0.1"
+  , "name": "backboneCQRS-clientscript"
+  , "version": "0.5.5"
   , "private": false
   , "main": "server.js"
   , "engines": {
